some layout issues
git-svn-id: http://halodev.ontoprise.com/svn/HaloSMWExtension/trunk@6196 f80b7aa0-dfcc-4e65-a0d9-74108174cbc8

--- a/extensions/SMWUserManual/skins/csh.css
+++ b/extensions/SMWUserManual/skins/csh.css
@@ -111,23 +111,25 @@
     border-collapse:collapse;
     margin:5px;
     padding: 5px;
+    background: #ffffff url(../skins/bg_radient.png) scroll repeat-x left;
 }
 .cshFeedbackFrame td {
     padding: 5px;
-	font-size: smaller;
     vertical-align: middle;
-    border: solid thin;
-	border-color: #e9e9e4;
-    border-collapse:collapse;
     width:100%;
     cursor: pointer; cursor: hand;
 }
 
-.cshFeedbackFrameHeader {
-	background: #ffffff url(../skins/bg_radient.png) scroll repeat-x left;
+.cshFeedbackFrameActive {
+    background-color: #e9e9e4;
+    width:98%;
+    border-collapse:collapse;
+    margin:5px;
+    padding: 5px;
+    background: #ffffff url(../skins/bg_radientHov.png) scroll repeat-x left;
 }
 
-.cshFeedbackFrameHeader:hover {
+.cshFeedbackFrame:hover {
 	background: #ffffff url(../skins/bg_radientHov.png) scroll repeat-x left;
 }
 
